{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 203,
  "lineage": "2e7e6c6f-b4c5-d7cd-cadc-8867292599ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pinprod-moka1-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0454ea20d80c9ae10179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0454ea20d80c9ae10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-06bda580d1ff60649"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.PinProd-RT",
            "aws_vpc.main",
            "aws_vpc.peer",
            "aws_vpc_peering_connection.peer",
            "data.aws_caller_identity.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PinProd-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552630710301:route-table/rtb-0454ea20d80c9ae10",
            "id": "rtb-0454ea20d80c9ae10",
            "owner_id": "552630710301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06bda580d1ff60649"
              }
            ],
            "tags": {
              "Name": "PinProd Route Table"
            },
            "tags_all": {
              "Name": "PinProd Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0f9265ab68089fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PinProd_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e01d91a350e33a6",
            "route_table_id": "rtb-0454ea20d80c9ae10",
            "subnet_id": "subnet-0ff14903a4709b31a"
          },
          "dependencies": [
            "aws_route_table.PinProd-RT",
            "aws_subnet.PinProd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EKS-CP-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114931343665:subnet/subnet-0f342cce8eee24437",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f342cce8eee24437",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114931343665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS CP Subnet 1"
            },
            "tags_all": {
              "Name": "EKS CP Subnet 1"
            },
            "vpc_id": "vpc-053c96082c542cdf2"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EKS-CP-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114931343665:subnet/subnet-07216271dee9ff1fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07216271dee9ff1fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114931343665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS CP Subnet 2"
            },
            "tags_all": {
              "Name": "EKS CP Subnet 2"
            },
            "vpc_id": "vpc-053c96082c542cdf2"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EKS-nodes-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114931343665:subnet/subnet-0600f7a57c52b0a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600f7a57c52b0a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114931343665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS node subnet"
            },
            "tags_all": {
              "Name": "EKS node subnet"
            },
            "vpc_id": "vpc-053c96082c542cdf2"
          },
          "dependencies": [
            "aws_vpc.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PODS-CGNat-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114931343665:subnet/subnet-0a4bc840e7ec88698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "100.64.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4bc840e7ec88698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114931343665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PODS CGNat Subnet1"
            },
            "tags_all": {
              "Name": "PODS CGNat Subnet1"
            },
            "vpc_id": "vpc-053c96082c542cdf2"
          },
          "dependencies": [
            "aws_vpc.peer",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PODS-CGNat-Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114931343665:subnet/subnet-0a14d5f728d4f074b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "100.65.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a14d5f728d4f074b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114931343665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PODS CGNat Subnet2"
            },
            "tags_all": {
              "Name": "PODS CGNat Subnet2"
            },
            "vpc_id": "vpc-053c96082c542cdf2"
          },
          "dependencies": [
            "aws_vpc.peer",
            "aws_vpc_ipv4_cidr_block_association.secondary_cidr2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PinProd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552630710301:subnet/subnet-0ff14903a4709b31a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff14903a4709b31a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552630710301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PinProd Subnet"
            },
            "tags_all": {
              "Name": "PinProd Subnet"
            },
            "vpc_id": "vpc-0f0f9265ab68089fa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552630710301:vpc/vpc-0f0f9265ab68089fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d3c7e86ad4dbe850",
            "default_route_table_id": "rtb-031d26657ab9ec70a",
            "default_security_group_id": "sg-0a0f8e435c88151ec",
            "dhcp_options_id": "dopt-0dcdae03111e38bd8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0f9265ab68089fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031d26657ab9ec70a",
            "owner_id": "552630710301",
            "tags": {
              "Name": "PinProd"
            },
            "tags_all": {
              "Name": "PinProd"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114931343665:vpc/vpc-053c96082c542cdf2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bbb2f57fef8038f",
            "default_route_table_id": "rtb-09d1be781dd344756",
            "default_security_group_id": "sg-0315fab5a28ffc5e4",
            "dhcp_options_id": "dopt-0df5c1a3b7967df7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053c96082c542cdf2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d1be781dd344756",
            "owner_id": "114931343665",
            "tags": {
              "Name": "moka1"
            },
            "tags_all": {
              "Name": "moka1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "auto_accept": false,
            "id": "pcx-06bda580d1ff60649",
            "peer_owner_id": "114931343665",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-053c96082c542cdf2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Side": "Requester"
            },
            "tags_all": {
              "Side": "Requester"
            },
            "vpc_id": "vpc-0f0f9265ab68089fa"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc.peer",
            "data.aws_caller_identity.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-06bda580d1ff60649",
            "peer_owner_id": "552630710301",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0f0f9265ab68089fa",
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-053c96082c542cdf2",
            "vpc_peering_connection_id": "pcx-06bda580d1ff60649"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc.peer",
            "aws_vpc_peering_connection.peer",
            "data.aws_caller_identity.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].accepter",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-06bda580d1ff60649",
            "vpc_peering_connection_id": "pcx-06bda580d1ff60649"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc.peer",
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer",
            "data.aws_caller_identity.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].requester",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "pcx-06bda580d1ff60649",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-06bda580d1ff60649"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_vpc.peer",
            "aws_vpc_peering_connection.peer",
            "aws_vpc_peering_connection_accepter.peer",
            "data.aws_caller_identity.peer"
          ]
        }
      ]
    }
  ]
}